# tapl-haskell

./: .gitignore  README.md
arith/: .gitignore  LICENSE  arith.cabal  stack.yaml
arith/.stack-work/install/x86_64-linux/lts-7.5/8.0.1/flag-cache/: arith-0.1.0.0-8yZ0MMWT8A92EsFJCef6G0  mtl-2.2.1-6qsR1PHUy5lL47Hpoa4jCM  parsec-3.1.11-BCos4GEVCuDB8dnOCBHO6X  text-1.2.2.1-5QpmrLQApEZ4Ly9nMHWY0s
arith/.stack-work/install/x86_64-linux/lts-7.5/8.0.1/lib/x86_64-linux-ghc-8.0.1/arith-0.1.0.0-8yZ0MMWT8A92EsFJCef6G0/: Lib.dyn_hi  Lib.hi
arith/.stack-work/install/x86_64-linux/lts-7.5/8.0.1/pkgdb/: package.cache
arith/.stack-work/intero/: intero-script936zBG  intero936AMM.hs  intero936NWS.hs  intero936njq.hs
arith/.stack-work/intero/intero9360tw/: Eval.hi  Main.hi  Parser.hi  Syntax.hi
arith/src/: REPL.hs
arith/src/Language/Arith/: Eval.hs  Lexer.hs  Parser.hs  Syntax.hs
arith/test/: TermTest.hs
stlc/: LICENSE  stack.yaml  stlc.cabal
untyped/: .gitignore  README.md  stack.yaml  untyped.cabal
untyped/app/: Main.hs
untyped/src/: REPL.hs
untyped/src/Language/Untyped/: Church.hs  Context.hs  Eval.hs  Lexer.hs  Parser.hs  Parser2.hs  PrettyPrinting.hs  Syntax.hs
untyped/test/: ContextTest.hs  EvalTest.hs  ParserTest.hs  Terms.hs
