name:                untyped
version:             0.1.0.0
synopsis:            Untyped Lambda Calculus Interpreter
description:         Please see README.md
homepage:            https://github.com/juanbono/untyped#readme
license:             BSD3
license-file:        LICENSE
author:              Juan Bono
maintainer:          juanbono94@gmail.com
copyright:           Copyright: (c) 2016 Juan Bono
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Untyped.Parser
                     , Language.Untyped.Lexer
                     , Language.Untyped.Syntax
                     , Language.Untyped.Eval
                     , Language.Untyped.Context
                     , Language.Untyped.PrettyPrinting
                     , Language.Untyped.Church
                     , Language.Untyped.Parser2
                     , REPL
  build-depends:       base            >= 4.7 && < 5
                     , parsec          >= 3.1.10
                     , repline         >= 0.1.4.0
                     , rainbow         >= 0.28.0.0
                     , ncurses         >= 0.2.10
                     , printcess       >= 0.1.0.0
                     , safe-exceptions >= 0.1.3.0
                     , annihilator     == 0.1.0.0
                     , mtl             >= 2.2.0
                     , containers
  default-language:    Haskell2010

executable untyped-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , untyped
  default-language:    Haskell2010

test-suite untyped-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , untyped
                     , tasty >= 0.10
                     , tasty-hunit >= 0.9
                     , tasty-hspec >= 1.1.0
                     , tasty-discover
  other-modules:       ParserTest
                     , Terms
                     , EvalTest
                     , ContextTest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/juanbono/tapl-haskell/untyped
